--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -6,5 +6,5 @@
 @import "IVueSvgLoader";
 @import "IVueList";
 @import "IVueListItem";
-@import "IVueListItemContent";
+@import "IVueArrowDownIcon";
 
