--- a/src/styles/components/IVueIcon.scss
+++ b/src/styles/components/IVueIcon.scss
@@ -2,7 +2,7 @@
       width: $size;
       min-width: $size;
       height: $size;
-      font-size: $size !important;
+      font-size: $size;
 }
 
 .ivue-icon {
