--- a/src/styles/components/IVueList.scss
+++ b/src/styles/components/IVueList.scss
@@ -5,5 +5,5 @@
       display: flex;
       flex-flow: column nowrap;
       list-style: none;
-      
+      -webkit-tap-highlight-color: transparent;
 }
