--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -12,3 +12,9 @@ $icon-size: 24px;
 
 // color
 $primary-color: #2d8cf0;
+
+// cursor
+$cursor-disabled: not-allowed;
+
+// size
+$font-size-small: 12px;
