--- a/src/styles/components/IVueListItem.scss
+++ b/src/styles/components/IVueListItem.scss
@@ -2,6 +2,7 @@
       position: relative;
       height: auto;
       z-index: 2;
+      list-style: none;
       
       .ivue-icon {
             margin: 0;
