--- a/src/styles/components/IVueBottomNav.scss
+++ b/src/styles/components/IVueBottomNav.scss
@@ -25,13 +25,12 @@
             min-width: 80px;
             width: 100%;
             height: 100%;
-            // font-weight: 400;
             border-radius: 0;
-            // opacity: .8;
             box-shadow: none !important;
             background: transparent !important;
             .ivue-ripple {
                   padding: 8px 12px 10px;
+                  transition: padding $ivue-transition-stand;
             }
             .ivue-button-content {
                   display: flex;
@@ -39,27 +38,73 @@
                   font-size: 12px;
                   white-space: nowrap;
                   will-change: font-size;
-            }
-            i.ivue-icon {
-                  color: inherit;
-                  margin-bottom: 4px;
+                  height: 100%;
                   transition: all $ivue-transition-stand;
             }
+            i.ivue-icon {
+                  position: absolute;
+                  left: 0;
+                  top: 0;
+                  right: 0;
+                  color: inherit;
+                  margin-bottom: 4px;
+                  transition: none;
+            }
             span {
+                  display: block;
                   line-height: 1;
             }
-            // 激活
+            /*激活*/
             &--active {
-                  padding-top: 6px;
                   opacity: 1;
-                  background-color: transparent;
+                  &:before {
+                        background-color: transparent;
+                  }
+                  .ivue-ripple {
+                        padding-top: 6px;
+                  }
                   .ivue-button-content {
                         font-size: 14px;
                   }
             }
-            // 没有激活时的状态
-            &:not(.ivue-button--active){
-                  color: rgba(0,0,0,.54) !important;
+            /*没有激活时的状态*/
+            &:not(.ivue-button--active) {
+                  opacity: .5;
+                  color: currentColor;
+            }
+      }
+      &--shift {
+            .ivue-button {
+                  min-width: 56px;
+                  max-width: 96px;
+                  will-change: min-width,max-width;
+                  transition: .3s $ivue-transition-default-timing;
+                  transition-property:  min-width, max-width;
+                  will-change: min-width, max-width;
+                  &--active {
+                        min-width: 96px;
+                        max-width: 168px;
+                  }
+                  .ivue-button-content {
+                        font-size: 14px;
+                        .ivue-icon{
+                              will-change: transform;
+                        }
+                        span{
+                              will-change: transform, opacity;
+                        }
+                  }
+            }
+      }
+}
+
+.ivue-bottom-nav--shift {
+      .ivue-button:not(.ivue-button--active) .ivue-button-content {
+            .ivue-icon {
+                  transform: scale(1, 1) translate(0, 8px);
+            }
+            span {
+                  opacity: 0;
             }
       }
 }
