--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -12,7 +12,8 @@ $icon-size: 24px;
 
 // color
 $primary-color: #2d8cf0;
-
+$text-color:#515a6e;
+$divider-color: rgba(0,0,0,0.38);
 // cursor
 $cursor-disabled: not-allowed;
 
