--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -15,6 +15,8 @@ $divider-color: rgba(0, 0, 0, 0.38);
 $text-color:#515a6e;
 $text-disable-color:#c5c8ce;
 $arrow-color: #808695;
+$border-color: #dcdee2;
+$border-multiple-color: #e8eaec;
 // cursor
 $cursor-disabled: not-allowed;
 // size
@@ -22,10 +24,9 @@ $font-size-small: 12px;
 // input
 $input-height-base: 32px;
 $input-placeholder-color: #c5c8ce;
-
 // background
 $background-color-select-hover: #f3f3f3;
-
+$background-color-multiple: #f7f7f7;
 // size
 $font-small-size: 12px;
 $font-base-size: 14px;
