--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -24,6 +24,7 @@ $font-size-small: 12px;
 // input
 $input-height-base: 32px;
 $input-placeholder-color: #c5c8ce;
+$input-disabled-color: #c5c8ce;
 // background
 $background-color-select-hover: #f3f3f3;
 $background-color-multiple: #f7f7f7;
