--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -10,7 +10,7 @@ $ivue-button-icon-size: 40px;
 // icon
 $icon-size: 24px;
 // color
-$primary-color: #2d8cf0;
+$primary-color: #4177F6;
 $divider-color: rgba(0, 0, 0, 0.38);
 $text-color:#515a6e;
 $text-disable-color:#c5c8ce;
@@ -25,9 +25,12 @@ $font-size-small: 12px;
 $input-height-base: 32px;
 $input-placeholder-color: #c5c8ce;
 $input-disabled-color: #c5c8ce;
+$input-disabled-bg: #ededed;
 // background
 $background-color-select-hover: #f3f3f3;
 $background-color-multiple: #f7f7f7;
 // size
 $font-small-size: 12px;
 $font-base-size: 14px;
+
+$explanation-color: #999;
