--- a/src/styles/components/IVueSelect.scss
+++ b/src/styles/components/IVueSelect.scss
@@ -187,6 +187,9 @@ $name: 'ivue-select';
             z-index: 999;
             transform-origin: center top 0px;
       }
+      .ivue-auto-complete{
+            height: auto;
+      }
       /*下拉菜单列表*/
       &-dropdown-list {
             width: 100%;
