--- a/src/styles/components/IVueInput.scss
+++ b/src/styles/components/IVueInput.scss
@@ -11,13 +11,37 @@ $name: 'ivue-input';
             padding: 4px 7px;
             font-size: $font-size-small;
             border-radius: 4px;
+            border: 1px solid $border-color;
             color: $text-color;
             cursor: text;
             width: 100%;
             height: 30px;
             line-height: 1.5;
-            transition: border $ivue-transition-default-timing,
-                        background $ivue-transition-default-timing,
-                        box-shadow $ivue-transition-default-timing
+            transition: border $ivue-transition-default-timing, background $ivue-transition-default-timing, box-shadow $ivue-transition-default-timing;
+            &:focus {
+                  outline: 0;
+                  box-shadow: 0 0 0 2px transparentize($primary-color, 0.8);
+            }
+            &:focus,
+            &:hover {
+                  border-color: $primary-color;
+            }
+            @include placeholder;
+      }
+      .#{$name}-icon {
+            position: absolute;
+            top: 50%;
+            right: 0;
+            line-height: 1;
+            margin-top: -15px;
+            font-size: $font-base-size;
+            font-weight: bold;
+            color: $arrow-color;
+            height: 100%;
+            transition: all .2s ease-in-out;
+            cursor: pointer;
+            &-clear {
+                  opacity: 0;
+            }
       }
 }
